--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+body {
+    background-color: lightseagreen;
+}
 .hidden {
     display: none;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.splash {
+    background-image: url("../images/space-woman.jpg");
+    
 }
